--- a/my-app/package.json
+++ b/my-app/package.json
@@ -24,6 +24,9 @@
     "ag-grid": "^18.1.2",
     "ag-grid-angular": "^22.1.1",
     "ag-grid-community": "^22.1.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
